added detailed resume

--- a/home.html
+++ b/home.html
@@ -412,7 +412,7 @@
                   <li>Ethernet device driver: Implemented the Ethernet (smc91111) device driver for xinu operating system on arm-qemu.</li>
                   <li>Future and promise implementation in Xinu: Designed and implemented future and promise synchronization protocol.</li>
                </ul>
-               <span class="categories"><i class="fa fa-tag"></i>C/C++, Operatingsystem, Xinu, Systemdesign</span>
+               <span class="categories"><i class="fa fa-tag"></i>C/C++, Operating system, Xinu, System design</span>
 		      </div>
 
             <div class="link-box">
@@ -462,7 +462,7 @@
 
 		      <div class="description-box">
 			      <h4>Automated Traffic Violation Detection</h4>
-			      <p>The objective of this project was to introduce an automated system which detects and penalise violations at a street intersection such as No parking violation, stop line violation during red light and one-way violation and also trace each and every individual vehicle. Core duties were to code the logic and upload it onto the microcontroller, analyse the data we get based on a sample tests and try to optimise the system.</p>
+			      <p>The objective of this project was to introduce an automated system which detects and penalise violations at a street intersection such as No parking violation, stop line violation during red light and one-way violation and also trace each and every individual vehicle. Core duties were to code the logic and upload it onto the microcontroller, analyse the data we get, based on a sample tests and try to optimise the system.</p>
                <span class="categories"><i class="fa fa-tag"></i>MSP430, Embedded C, Wireless Communication, Analog & Digital Electronics</span>
 		      </div>
 
@@ -478,7 +478,7 @@
 
 		      <div class="description-box">
 			      <h4>RF Remote Controlled Land Mine Detector</h4>
-			      <p>The aim of this project was to control the movement of a remote controlled robot to detect metals. The robot is controlled by a RF remote. A high sensitive induction type metal detector is designed using Beat Frequency Oscillator principle and fixed to this robot. Core duties were to code the logic and upload it onto the microcontroller and build the metal detector from scratch.</p>
+			      <p>The aim of this project was to control the movement of a remote controlled robot to detect land mines. The robot is controlled by a RF remote. A high sensitive induction type land mine detector is designed using Beat Frequency Oscillator principle and fixed on this robot. Core duties were to code the logic and upload it onto the microcontroller and build the land mine detector.</p>
                <span class="categories"><i class="fa fa-tag"></i> 8051, Embedded C, Wireless Communication, Analog & Digital Electronics</span>
 		      </div>
 
