added links to open in new tab

--- a/home.html
+++ b/home.html
@@ -56,14 +56,13 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Vishwas Vijaya Kumar</h1>
-            <h3>I'm a Indiana University based <span>Computer Science Graduate Student.</span> Looking for Internship opportunities.
-               Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h3>A Indiana University based Computer Science Graduate Student. Looking for internship opportunities.Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
 
-               <li><a href="http://www.linkedin.com/in/vishwaskumar"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="http://www.github.com/VishwasKumar"><i class="fa fa-github"></i></a></li>
+               <li><a href="http://www.linkedin.com/in/vishwaskumar" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="http://www.github.com/VishwasKumar" target="_blank"><i class="fa fa-github"></i></a></li>
             </ul>
          </div>
       </div>
@@ -116,7 +115,7 @@
                <div class="columns download">
                   <p>
                      <a href="download/Resume.pdf" class="button" download><i class="fa fa-download"></i>Download Resume</a>
-                     <a href="download/Resume.pdf" class="button"><i class="fa fa-user"></i>View Resume Online</a>
+                     <a href="download/Resume.pdf" class="button" target="_blank"><i class="fa fa-user"></i>View Resume Online</a>
                   </p>
                </div>
 
@@ -183,7 +182,7 @@
       <div class="row work">
 
          <div class="three columns header-col">
-            <h1><span>Work</span></h1>
+            <h1><span>Professional Experience</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -212,7 +211,7 @@
                <div class="twelve columns">
 
                   <h3>ThoughtWorks Inc.</h3>
-                  <p class="info">Software Developer Intern <span>&bull;</span> <em class="date">December 2013 - January 2014</em></p>
+                  <p class="info">Software Developer Intern <span>&bull;</span> <em class="date">December 2013</em></p>
                   <ul class="worklist">
                   <li>Successfully completed ThoughtWorks University, a trainee program where I delivered a eCommerce Website to a Bi-Cycle retailer. Also, Optimized the security of payment login using LDAP and implemented a custom payment service</li>
                   <li>Initiated the hardware engineering trend in ThoughtWorks.</li>
