--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Vishwas Vijaya Kumar</h1>
-            <h3>A Indiana University based Computer Science Graduate Student. Looking for internship opportunities.Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h3>An Indiana University based Computer Science Graduate Student. Looking for internship opportunities. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
