--- a/home.html
+++ b/home.html
@@ -147,7 +147,7 @@
                <div class="twelve columns">
 
                   <h3>Indiana University Bloomington</h3>
-                  <p class="info">Master's in Computer Science <span>&bull;</span> <em class="date">August 2015</em></p>
+                  <p class="info">Master's in Computer Science <span>&bull;</span> <em class="date">August 2015 - May 2017</em></p>
 
                   <p>
                   GPA - 3.9/4.0
