new tab attributes added to links

--- a/home.html
+++ b/home.html
@@ -415,7 +415,7 @@
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.xinu.cs.purdue.edu/">Details</a>
+               <a href="http://www.xinu.cs.purdue.edu/" target="_blank">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -432,7 +432,7 @@
 		      </div>
 
             <div class="link-box">
-               <a href="http://vishnusagar.herokuapp.com/">Details</a>
+               <a href="http://vishnusagar.herokuapp.com/" target="_blank">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -449,7 +449,7 @@
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.solidarityfoundation.in">Details</a>
+               <a href="http://www.solidarityfoundation.in" target="_blank">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
