updating resume to latest

--- a/home.html
+++ b/home.html
@@ -147,7 +147,7 @@
                <div class="twelve columns">
 
                   <h3>Indiana University Bloomington</h3>
-                  <p class="info">Master's in Computer Science <span>&bull;</span> <em class="date">August 2015 - May 2017</em></p>
+                  <p class="info">Master's in Computer Science <span>&bull;</span> <em class="date">August 2015 - present</em></p>
 
                   <p>
                   GPA - 3.9/4.0
@@ -191,15 +191,15 @@
 
                <div class="twelve columns">
 
-                  <h3>ThoughtWorks Inc.</h3>
-                  <p class="info">Software Developer/Technology Consultant <span>&bull;</span> <em class="date">January 2014 - July 2015</em></p>
+                  <h3>Kroger Technology</h3>
+                  <p class="info">Java Developer <span>&bull;</span> <em class="date">May 2016 - present</em></p>
                   <ul class="worklist">
-                  <li>Minimized project cost and effort by designing a custom continuous integration framework using GoCD and TeamCity.</li>
-                  <li>Reduced manual effort by configuring an automated configuration management tool called Puppet.</li>
-                  <li>Engineered "sales forecasting algorithms", achieving 95%0 accuracy using Hadoop coupled with an administrative website using J2EE(Servlets, JSP) and JSDK (Java, JDBC) on Spring MVC improving decision-making time</li>
-                  <li>Improved product development time by containerized the web application using Docker.Also, Implemented containers in delivery further reducing feedback and delivery times.</li>
-                  <li>Boosted development time by incorporating the ELK stack to maintain a centralized log repository.</li>
-                  <li>Optimized business and technical decision-making process by designing an efficient data metrics collection mechanism using Netfix Suro and Graphite.</li>
+                      <li>Designed the product search module, a spring boot application with DataStax Cassandra back-end.</li>
+                      <li>Built a RESTful endpoint to be consumed by the rest of the components for item search.</li>
+                      <li>Redesigned Kroger e-commerce website using ReactJS, REDUX stack to improve page load times which gives a one way binded componentized solution and easy state management.</li>
+                      <li>Developed components using test driven development using mocha, chai for client and mockito for the server.</li>
+                      <li>Spiked a GraphQL solution where multiple REST end-points can be replaced by one graphql end-point.</li>
+                      <li>Replaced all media-query based approach to a products per row (ppr) approach which uses dimensions of the screen instead of the container dimensions.</li>
                   </ul>
 
                </div>
@@ -211,11 +211,17 @@
                <div class="twelve columns">
 
                   <h3>ThoughtWorks Inc.</h3>
-                  <p class="info">Software Developer Intern <span>&bull;</span> <em class="date">December 2013</em></p>
+                  <p class="info">Software Developer <span>&bull;</span> <em class="date">December 2013 - July 2015</em></p>
                   <ul class="worklist">
-                  <li>Successfully completed ThoughtWorks University, a trainee program where I delivered a eCommerce Website to a Bi-Cycle retailer. Also, Optimized the security of payment login using LDAP and implemented a custom payment service</li>
-                  <li>Initiated the hardware engineering trend in ThoughtWorks.</li>
-                  <li>Introduced "Meet-Up", a platform for people sharing ideas on open-source initiatives</li>
+                      <li>Designed a J2EE E-commerce web application using Java 7 and Spring MVC coupled with AngularJS front-end.</li>
+                      <li>Implemented Spring security solution for login authorization using LDAP for access management using groups.</li>
+                      <li>Containerized the web application using Docker for increased portability and rapid deployment.</li>
+                      <li>Reduced manual effort by configuring an automated configuration management tool called Puppet.</li>
+                      <li>Optimized business and technical decision-making process by designing an efficient data metrics collection mechanism using Netfix Suro and Graphite.</li>
+                      <li>Minimized project effort and cost by designing a custom continuous integration and delivery framework using GoCD and TeamCity.</li>
+                      <li>Automated the code release process, bring the total time for code releases from 8 hours to 1 hour.</li>
+                      <li>Engineered ”sales forecasting algorithms”, achieving 95% accuracy using Hadoop coupled with an administrative website using J2EE(Servlets, JSP) and JSDK (Java, JDBC) on Spring MVC improving decision-making time.</li>
+                      <li>Boosted development time by incorporating the ELK stack to maintain a centralized log repository.</li>
                   </ul>
                </div>
 
@@ -251,6 +257,7 @@
 					</ul>
                <ul class="skills column-right">
                   <li><em>Spring MVC</em></li>
+                  <li><em>Spring Boot</em></li>
                   <li><em>Hadoop</em></li>
                   <li><em>JUnit</em></li>
                   <li><em>Solr</em></li>
