removed white space

--- a/home.html
+++ b/home.html
@@ -148,25 +148,16 @@
 
                   <h3>Indiana University Bloomington</h3>
                   <p class="info">Master's in Computer Science <span>&bull;</span> <em class="date">August 2015 - present</em></p>
-
-                  <p>
-                  GPA - 3.9/4.0
-                  </p>
-
+                  <p>GPA - 3.9/4.0</p>
                </div>
 
             </div> <!-- item end -->
 
             <div class="row item">
-
                <div class="twelve columns">
-
                   <h3>BMS College of Engineering</h3>
                   <p class="info">B.E. Degree in Telecommunication Engineering <span>&bull;</span> <em class="date">August 2009</em> - <em class="date">May 2013</em></p>
-
-                  <p>
-                  GPA 9.01/10.00
-                  </p>
+                  <p>GPA 9.01/10.00</p>
 
                </div>
 
@@ -194,12 +185,12 @@
                   <h3>Kroger Technology</h3>
                   <p class="info">Java Developer <span>&bull;</span> <em class="date">May 2016 - present</em></p>
                   <ul class="worklist">
-                      <li>Designed the product search module, a spring boot application with DataStax Cassandra back-end.</li>
-                      <li>Built a RESTful endpoint to be consumed by the rest of the components for item search.</li>
-                      <li>Redesigned Kroger e-commerce website using ReactJS, REDUX stack to improve page load times which gives a one way binded componentized solution and easy state management.</li>
-                      <li>Developed components using test driven development using mocha, chai for client and mockito for the server.</li>
-                      <li>Spiked a GraphQL solution where multiple REST end-points can be replaced by one graphql end-point.</li>
-                      <li>Replaced all media-query based approach to a products per row (ppr) approach which uses dimensions of the screen instead of the container dimensions.</li>
+                      <li>&bull; Designed the product search module, a spring boot application with DataStax Cassandra back-end.</li>
+                      <li>&bull; Redesigned Kroger e-commerce website using ReactJS, REDUX stack to improve page load times which gives a one way binded componentized solution and easy state management.</li>
+                      <li>&bull; Developed components using test driven development using mocha, chai for client and mockito for the server.</li>
+                      <li>&bull; Spiked a GraphQL solution where multiple REST end-points can be replaced by one graphql end-point.</li>
+                      <li>&bull; Replaced all media-query based approach to a products per row (ppr) approach which uses dimensions of the screen instead of the container dimensions.</li>
+                      <li>&bull; Spiked a GraphQL solution where multiple REST end-points can be replaced by one graphql end-point.</li>
                   </ul>
 
                </div>
@@ -213,15 +204,15 @@
                   <h3>ThoughtWorks Inc.</h3>
                   <p class="info">Software Developer <span>&bull;</span> <em class="date">December 2013 - July 2015</em></p>
                   <ul class="worklist">
-                      <li>Designed a J2EE E-commerce web application using Java 7 and Spring MVC coupled with AngularJS front-end.</li>
-                      <li>Implemented Spring security solution for login authorization using LDAP for access management using groups.</li>
-                      <li>Containerized the web application using Docker for increased portability and rapid deployment.</li>
-                      <li>Reduced manual effort by configuring an automated configuration management tool called Puppet.</li>
-                      <li>Optimized business and technical decision-making process by designing an efficient data metrics collection mechanism using Netfix Suro and Graphite.</li>
-                      <li>Minimized project effort and cost by designing a custom continuous integration and delivery framework using GoCD and TeamCity.</li>
-                      <li>Automated the code release process, bring the total time for code releases from 8 hours to 1 hour.</li>
-                      <li>Engineered ”sales forecasting algorithms”, achieving 95% accuracy using Hadoop coupled with an administrative website using J2EE(Servlets, JSP) and JSDK (Java, JDBC) on Spring MVC improving decision-making time.</li>
-                      <li>Boosted development time by incorporating the ELK stack to maintain a centralized log repository.</li>
+                      <li>&bull; Designed a J2EE E-commerce web application using Java 7 and Spring MVC coupled with AngularJS front-end.</li>
+                      <li>&bull; Implemented Spring security solution for login authorization using LDAP for access management using groups.</li>
+                      <li>&bull; Containerized the web application using Docker for increased portability and rapid deployment.</li>
+                      <li>&bull; Reduced manual effort by configuring an automated configuration management tool called Puppet.</li>
+                      <li>&bull; Optimized business and technical decision-making process by designing an efficient data metrics collection mechanism using Netfix Suro and Graphite.</li>
+                      <li>&bull; Minimized project effort and cost by designing a custom continuous integration and delivery framework using GoCD and TeamCity.</li>
+                      <li>&bull; Automated the code release process, bring the total time for code releases from 8 hours to 1 hour.</li>
+                      <li>&bull; Engineered ”sales forecasting algorithms”, achieving 95% accuracy using Hadoop coupled with an administrative website using J2EE(Servlets, JSP) and JSDK (Java, JDBC) on Spring MVC improving decision-making time.</li>
+                      <li>&bull; Boosted development time by incorporating the ELK stack to maintain a centralized log repository.</li>
                   </ul>
                </div>
 
